--- a/my-redirect-template.html
+++ b/my-redirect-template.html
@@ -2,9 +2,9 @@
 <html><head>
 
 <style>
-html, body { height: 100%; }
+html, body { height: 100%; font-family: Sans-Serif; }
 h1         { line-height: 2; }
-.dist  { line-height: 4; }
+.dist      { line-height: 4; }
 
 body {
   background: linear-gradient(to bottom, #222288, #6666BB 50%, #222288);
@@ -24,14 +24,15 @@ ul {
 
 <script>
 function redirectWithDelay(seconds) {
-  var container = document.getElementById('delayCount');
-  if(container) {
-    container.innerText = "" + seconds;
+  var el = document.getElementById('delayCount');
+  if(el) {
+    el.innerText = "" + seconds;
   }
   if(seconds > 0) {
     seconds--;
     window.setTimeout('redirectWithDelay(' + seconds + ')', 1000)
   } else {
+    showLoading();
     window.location.replace('JITSI_REDIRECT');
   }
 }
@@ -39,12 +40,26 @@ function redirectWithDelay(seconds) {
 function setDontBother() {
   localStorage.setItem("DontBotherTimestamp", Date.now());
 }
+
+function showLoading() {
+  var el = document.getElementById('heading');
+  if(el) {
+    el.innerHtml = '';
+    el.textContent = 'Loading...';
+  }
+  var el = document.getElementById('info');
+  if(el) {
+    el.innerHtml = '';
+    el.textContent = '';
+  }
+}
 </script>
 
 </head><body>
 
-<h1>Jitsi-Usage Information</h1>
+<h1 id="heading">Jitsi-Usage Information</h1>
 
+<div id="info">
 <ul>
   <li>Use Jitsi to communicate with others</li>
   <li>Be nice to others</li>
@@ -52,18 +67,21 @@ function setDontBother() {
   <li>Don't use the Camera if you are tired because others will notice</li>
 </ul>
 
-<div class="dist">
+<div class="dist conf">
   <button type="button" onclick="redirectWithDelay(0)">Confirm</button>
 </div>
-<div class="dist">
+<div class="dist conf">
   <button type="button" onclick="setDontBother(); redirectWithDelay(0);">Confirm and don't bother me for some days</button>
 </div>
 <p class="dist">...automatically skipping in <span id="delayCount"></span> seconds...</p>
+</div>
 
 <script>
-  confirmed = localStorage.getItem("Confirmed");
-  console.log(confirmed)
-  if(confirmed == "true") {
+  DONT_BOTHER_TIME = 1000 * 60 * 3; /minutes/
+  dbTime = localStorage.getItem("DontBotherTimestamp");
+  timeDiff = Date.now() - dbTime;
+
+  if(timeDiff < DONT_BOTHER_TIME) {
     redirectWithDelay(0);
   } else {
     redirectWithDelay(20);
